<resources>
    <string name="app_name_rr">Dolittle_graph_호흡_BPM표시</string>
    <string name="app_name_hr">Dolittle_graph_심박_BPM표시</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kakao_app_key" translatable="false">7bd5635223614a8da06ec0d6317a65c0</string>
    <string name="kakao_oauth_key" translatable="false">kakao7bd5635223614a8da06ec0d6317a65c0</string>
    <string name="kakao_rest_KakaoAK" translatable="false">KakaoAK fd0fac75c204418419bcb62dab5333f0</string>
    <string name="thingy_please_wait">Please wait…</string>
    <string name="thingy_not_connected">Not connected to a Thingy</string>
    <string name="thingy_not_configured">No Thingy configured</string>
    <string name="thingy_error_service_not_bound">ThingyProxyService is not bound to the activity!</string>
    <string name="thingy_error_mtu_failed">MTU configuration failed with error %d</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_foreground_content">Update in progress…</string>
    <string name="dfu_status_foreground_title">Device Firmware Update</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="thingy_action_disconnect">Disconnect</string>
    <string name="thingy_disconnected">%s disconnected! try to Reconnect</string>
    <string name="ble_turned_off">Please turn on bluetooth and reconnect to the device in order to keep receiving values from your Thingy</string>
    <string name="thingy_notification_text">%s is still connected</string>
    <string name="device_deleted">Device has been deleted!</string>
    <string name="delete_thingy_title">Delete Device</string>
    <string name="delete_thingy_message">Deleting this Device will remove all the saved configuration for this Thingy from the app. Do you wish to continue?</string>
    <string name="cancel_initial_configuration_process_title">디바이스 연결 취소</string>
    <string name="cancel_initial_configuration_process_message">연결 단계를 취소할 경우 처음부터 다시 시작해야 합니다. 취소하시겠습니까?</string>
    <string name="version">version %s</string>
    <string name="info_git_hub">GitHub</string>
    <string name="one_connected">%s is connected</string>
    <string name="two_connected">%d are connected</string>
    <string name="one_disconnected">%s is disconnected</string>
    <string name="two_disconnected">%d are disconnected</string>
    <string name="default_thingy_name">Thingy:52</string>
    <string name="no_ble">Device doesn\'t support BLE!</string>
    <string name="heart_graph">Heart</string>
    <string name="respiratory_graph">Respiratory</string>
    <string name="time">Time</string>
    <plurals name="thingy_notification_text_nothing_connected">
        <item quantity="one">%s is disconnected</item>
        <item quantity="two">%d are disconnected</item>
        <item quantity="few">%d are disconnected</item>
        <item quantity="other">%d are disconnected</item>
        <item quantity="many">%d are disconnected</item>
    </plurals>
    <string name="glb_not_available">n/a</string>
    <string name="glb_null"></string>
    <string name="glb_error">에러가 나타났어요. 계속 나타난다면 문의해주세요.</string>
    <string name="glb_cancel">취소</string>
    <string name="glb_ok">확인</string>
    <string name="glb_remove">삭제</string>
    <string name="glb_finish">완료하기</string>
    <string name="glb_save">저장</string>
    <string name="glb_login_ok">로그인 성공</string>
    <string name="glb_login_no">로그인 실패</string>
    <string name="glb_access_token">accessToken</string>
    <string name="glb_refresh_token">refreshToken</string>
    <string name="glb_fragment_tag">Popup</string>
    <string name="glb_api_kakao_url">https://dapi.kakao.com/</string>
    <string name="glb_api_dolittle_url">https://api.moon-cluster.zentry.kr/</string>
    <string name="glb_intent_extra_count">count</string>
    <string name="glb_intent_extra_time">time</string>
    <string name="glb_intent_extra_name">name</string>
    <string name="glb_intent_extra_result">result</string>
    <string name="glb_intent_extra_cancel">cancel</string>
    <string name="glb_intent_extra_measure_type">measure_type</string>
    <string name="glb_intent_extra_measure_heart">measure_heart</string>
    <string name="glb_intent_extra_measure_res">measure_res</string>
    <string name="glb_intent_extra_add_edit">isEdit</string>
    <string name="glb_intent_extra_edit">edit</string>
    <string name="glb_intent_extra_add">add</string>
    <string name="glb_intent_extra_diary_id">diary_id</string>
    <string name="glb_rate_hr_data_obj">HR_MANUAL</string>
    <string name="glb_rate_rr_data_obj">RR_MANUAL</string>
    <string name="glb_rate_hr_auto_data_obj">HR_AUTO</string>
    <string name="glb_rate_rr_auto_data_obj">RR_AUTO</string>
    <string name="glb_weight_data_obj_unit_kg">kg</string>
    <string name="glb_field_pet_name">name</string>
    <string name="glb_field_type">type</string>
    <string name="glb_type_all">ALL</string>
    <string name="glb_field_Alarm_ID">AlarmID</string>
    <string name="glb_field_diary_id">diaryId</string>
    <string name="glb_field_disease">disease</string>
    <string name="glb_field_sort_id">_id</string>
    <string name="glb_field_timestamp">timeStamp</string>
    <string name="glb_field_key_species">species</string>
    <string name="glb_field_key_dog">dog</string>
    <string name="glb_field_key_cat">cat</string>
    <string name="glb_temp_animal_name">(Animal Name)</string>
    <string name="gbl_temp_user_name">(user Nickname)</string>
    <string name="glb_temp_date">0000 - 00 - 00</string>
    <string name="glb_temp_subject">일상</string>
    <string name="glb_temp_title">(제목)</string>
    <string name="glb_label_weight">Weight</string>
    <string name="glb_wave">~</string>
    <string name="glb_times_kor"> 회</string>
    <string name="glb_minus">-</string>
    <string name="glb_device_not_connected">블루투스 통신 디바이스를 연결 해주세요.</string>
    <string name="glb_json_result">result</string>
    <string name="glb_api_ret_invalid">Invalid username or password</string>
    <string name="glb_api_ret_duplicated_email">Duplicated Email</string>
    <string name="glb_api_ret_duplicated_nick">Duplicated Nickname</string>
    <string name="msg_gps_internet_off">인터넷 혹은 GPS가 켜져있는지 확인 부탁드려요.</string>
    <string name="msg_permission_rationale_text">근처 병원 조회 서비스를 이용하려면 위치 권한이 필요해요.</string>
    <string name="msg_permission_denied_title">알고 계시나요?</string>
    <string name="msg_permission_denied_text">근처 병원 조회 서비스를 이용하려면 위치 권한이 필요하기에 직접 설정을 부탁드려요.</string>
    <string name="msg_back_quit">뒤로 가기 버튼을 한 번 더 누르시면 종료됩니다.</string>
    <string name="msg_date_mili_format">yyyy-MM-dd\'T\'HH:mm:ss.SSS</string>
    <string name="msg_date_sec_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="obj_home_reg_animal">반려동물 등록하기</string>
    <string name="obj_home_title">나의 반려동물</string>
    <string name="obj_map_title">근처 병원</string>
    <string name="obj_map_list_open">목록 보기</string>
    <string name="obj_map_open">지도 보기</string>
    <string name="msg_duplicated_email">존재하는 이메일입니다.</string>
    <string name="msg_duplicated_nick">존재하는 닉네임입니다.</string>
    <string name="msg_is_input_nick">닉네임을 입력하셨나요?</string>
    <string name="obj_reg_title">회원 가입</string>
    <string name="obj_reg_email">이메일</string>
    <string name="obj_reg_email_hint">이메일을 입력해주세요</string>
    <string name="obj_reg_nick">닉네임</string>
    <string name="obj_reg_nick_hint">닉네임을 입력해주세요</string>
    <string name="obj_reg_finish">완료하기</string>
    <string name="msg_register_not_selected_species">종을 선택해주세요</string>
    <string name="msg_animal_information_register_already_register">이미 등록된 반려동물인 것 같습니다</string>
    <string name="msg_animal_information_register_error">알 수 없는 에러</string>
    <string name="obj_ani_reg_title">반려동물 등록하기</string>
    <string name="obj_ani_reg_name">이름</string>
    <string name="obj_ani_reg_name_hint">이름을 입력해주세요</string>
    <string name="obj_ani_reg_birth_age">생년월일 / 나이</string>
    <string name="obj_ani_reg_birth_hint">생년월일 입력</string>
    <string name="obj_ani_reg_age_hint">0</string>
    <string name="obj_ani_reg_age_year">년</string>
    <string name="obj_ani_reg_age_month">개월</string>
    <string name="obj_ani_reg_species">종</string>
    <string name="obj_ani_reg_species_dog">개</string>
    <string name="obj_ani_reg_species_cat">고양이</string>
    <string name="obj_ani_reg_breed">품종</string>
    <string name="obj_ani_reg_breed_hint">품종을 선택해주세요</string>
    <string name="obj_ani_reg_sex">성별 (중성화)</string>
    <string name="obj_ani_reg_sex_male">수컷</string>
    <string name="obj_ani_reg_sex_male_na">수컷(중성화)</string>
    <string name="obj_ani_reg_sex_female">암컷</string>
    <string name="obj_ani_reg_sex_female_na">암컷(중성화)</string>
    <string name="obj_ani_reg_heart_disease">심장병 이력</string>
    <string name="obj_ani_reg_heart_disease_yes">있음</string>
    <string name="obj_save_content_save">저장하시겠습니까?</string>
    <string name="obj_tap_save_content_title">측정 완료</string>
    <string name="obj_tap_save_ok">저장</string>
    <string name="obj_tap_save_cancel">다시 측정</string>
    <string name="obj_auto_save_content_hr">심박수&#160;:&#160;</string>
    <string name="obj_auto_save_content_rr">호흡수&#160;:&#160;</string>
    <string name="msg_exit_title">Dolittle 회원을 탈퇴하시겠습니까?</string>
    <string name="msg_exit_content">개인정보 이용 기록은 모두 삭제되며,\n삭제된 계정은 복구할 수 없습니다.</string>
    <string name="msg_exit_no">아니오</string>
    <string name="msg_exit_yes">예, 탈퇴하겠습니다.</string>
    <string name="obj_scd_add_title">일정 추가</string>
    <string name="obj_scd_add_sub_hint">알람제목</string>
    <string name="obj_scd_add_repeat_one">한번반</string>
    <string name="obj_scd_add_repeat_repeat">반복</string>
    <string name="obj_scd_add_time">시간</string>
    <string name="obj_scd_add_time_hint">오전 09:00</string>
    <string name="obj_scd_add_date">날짜</string>
    <string name="obj_scd_add_date_hint">2021 - 01 - 01 (월)</string>
    <string name="obj_scd_add_finish">저장하기</string>
    <string name="obj_scd_delete">일정 삭제하기</string>
    <string name="obj_scd_add_week0">월</string>
    <string name="obj_scd_add_week1">화</string>
    <string name="obj_scd_add_week2">수</string>
    <string name="obj_scd_add_week3">목</string>
    <string name="obj_scd_add_week4">금</string>
    <string name="obj_scd_add_week5">토</string>
    <string name="obj_scd_add_week6">일</string>
</resources>