<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <TextView
        style="@style/textView_black_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/obj_tap_save_content_title"
        android:textSize="20sp" />

    <TextView
        android:typeface="monospace"
        android:id="@+id/tv_auto_save_hr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/obj_auto_save_content_hr"
        android:textColor="@color/zentry_red"
        android:textSize="32sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <TextView
        android:typeface="monospace"
        android:id="@+id/tv_auto_save_rr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/obj_auto_save_content_rr"
        android:textColor="@color/zentry_blue"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/obj_save_content_save"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_auto_save_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_main_sqaure"
            android:text="@string/obj_tap_save_ok"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_auto_save_cancel"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_square"
            android:text="@string/obj_tap_save_cancel"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>